Make code cleaner + remove some unused Variable